--- a/creatingCards.html
+++ b/creatingCards.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
-    <script src="creatingCard.js" defer></script>
-    <link rel="stylesheet" href="creatingCard.css" />
+    <script defer src="creatingCards.js" defer></script>
+    <link rel="stylesheet" href="creatingCards.css" />
   </head>
   <body>
     <header class="header">
